tests/compile_fail/008_buffer_negative_size.vox
a buffer called "bad" is -5 bytes.
